# fedops

./: .dockerignore  .flake8  .gitignore  CI_CD_SUMMARY.md  Dockerfile.ci  Dockerfile.dev  README.md  app.py  docker-compose.yml  initial_params.pkl  main.ipynb  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: SETUP_CHECKLIST.md
.github/workflows/: ci-cd.yml  ci.yml  pr-checks.yml
docs/: CI_CD_GUIDE.md  QUICK_START.md
myapp/: client_app.py  server_app.py  task.py
static/css/: style.css
static/js/: clients.js  dashboard.js  system.js
templates/: base.html  checkpoints.html  clients.html  dashboard.html  index.html  inference.html  system.html
tests/: test_flower_integration.py  test_model.py
